Add LocationHistoryFragment in MainActivity

--- a/appbase/build.gradle
+++ b/appbase/build.gradle
@@ -90,8 +90,8 @@ dependencies {
 //    implementation VdoPlayer.vdoPlayer
     implementation Lottie.lottie
 
-    debugCompile Chunk.debug
-    releaseCompile Chunk.release
+    debugApi Chunk.debug
+    releaseApi Chunk.release
 
     implementation CommonLibs.timber
 
