--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.locationtracker"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0.0.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -39,6 +39,13 @@ android {
         debug {
             resValue("string", "PORT_NUMBER", "8081")
         }
+    }
+
+    lintOptions {
+        checkReleaseBuilds false
+        // Or, if you prefer, you can continue to check for errors in release builds,
+        // but continue the build even when errors are found:
+        abortOnError false
     }
 
 }
@@ -91,7 +98,6 @@ dependencies {
     implementation AndroidXAnnotations.jobIntentService
 
     implementation 'devs.mulham.horizontalcalendar:horizontalcalendar:1.3.4'
-
 
     implementation Retrofit.rxJavaAdapter
     implementation Retrofit.loggingInterceptor
