--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:name=".LocationTrackerApplication"
@@ -17,9 +18,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MapActivity">
+        <activity android:name=".activities.SelfExaminationActivity">
 
         </activity>
+        <activity android:name=".activities.MapActivity"></activity>
         <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,9 +37,7 @@
                 <action android:name="com.facebook.orca" />
             </intent-filter>
         </receiver>
-        <receiver android:name=".background.workaround.AlarmReceiver">
-
-        </receiver>
+        <receiver android:name=".background.workaround.AlarmReceiver"></receiver>
 
         <provider
             android:name="androidx.work.impl.WorkManagerInitializer"
