--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:name=".LocationTrackerApplication"
@@ -18,10 +19,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.SelfExaminationActivity">
-
-        </activity>
-        <activity android:name=".activities.MapActivity"></activity>
+        <activity android:name=".activities.ContactListActivity"></activity>
+        <activity android:name=".activities.SelfExaminationActivity"></activity>
+        <activity android:name=".activities.MapActivity" />
         <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,7 +37,7 @@
                 <action android:name="com.facebook.orca" />
             </intent-filter>
         </receiver>
-        <receiver android:name=".background.workaround.AlarmReceiver"></receiver>
+        <receiver android:name=".background.workaround.AlarmReceiver" />
 
         <provider
             android:name="androidx.work.impl.WorkManagerInitializer"
@@ -49,7 +49,6 @@
             android:name=".background.LocationTrackerService"
             android:enabled="true"
             android:exported="true" />
-
         <service
             android:name=".background.LostLocationService"
             android:enabled="true"
